gccida/g3/consec_sets_giv
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/consec_sets_giv/src/loop.c:7381:4: error: expected ';' after expression
rtx v30; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/consec_sets_giv/src/loop.c:7381:5: error: use of undeclared identifier 'v30'; did you mean 'v20'?
rtx v30; // rax 
    ^~~
    v20
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/consec_sets_giv/src/loop.c:7372:5: note: 'v20' declared here
int v20; // eax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/consec_sets_giv/src/loop.c:7390:6: error: use of undeclared identifier 'add_vala'; did you mean 'add_val'?
rtx *add_vala; // [rsp+AAh] [rbp-58h] 
     ^~~~~~~~
     add_val
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/consec_sets_giv/src/loop.c:7358:6: note: 'add_val' declared here
rtx *add_val, 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/consec_sets_giv/src/loop.c:7390:5: error: invalid operands to binary expression ('struct rtx_def *' and 'rtx *' (aka 'struct rtx_def **'))
rtx *add_vala; // [rsp+AAh] [rbp-58h] 
~~~ ^~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/consec_sets_giv/src/loop.c:7391:4: error: expected ';' after expression
rtx v40; // [rsp+B2h] [rbp-50h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/consec_sets_giv/src/loop.c:7391:5: error: use of undeclared identifier 'v40'; did you mean 'v20'?
rtx v40; // [rsp+B2h] [rbp-50h] 
    ^~~
    v20
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/consec_sets_giv/src/loop.c:7372:5: note: 'v20' declared here
int v20; // eax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/consec_sets_giv/src/loop.c:7392:4: error: expected ';' after expression
rtx src_rega[2]; // [rsp+BAh] [rbp-48h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/consec_sets_giv/src/loop.c:7392:5: error: use of undeclared identifier 'src_rega'; did you mean 'src_reg'?
rtx src_rega[2]; // [rsp+BAh] [rbp-48h] BYREF 
    ^~~~~~~~
    src_reg
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/consec_sets_giv/src/loop.c:7356:5: note: 'src_reg' declared here
rtx src_reg, 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/consec_sets_giv/src/loop.c:7399:1: error: use of undeclared identifier 'src_rega'; did you mean 'src_reg'?
src_rega[0] = src_reg; 
^~~~~~~~
src_reg
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/consec_sets_giv/src/loop.c:7356:5: note: 'src_reg' declared here
rtx src_reg, 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/consec_sets_giv/src/loop.c:7399:13: error: assigning to 'struct rtx_def' from incompatible type 'rtx' (aka 'struct rtx_def *'); dereference with *
src_rega[0] = src_reg; 
            ^ ~~~~~~~
              *
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/consec_sets_giv/src/loop.c:7400:1: error: use of undeclared identifier 'add_vala'; did you mean 'add_val'?
add_vala = add_val; 
^~~~~~~~
add_val
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/consec_sets_giv/src/loop.c:7358:6: note: 'add_val' declared here
rtx *add_val, 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/consec_sets_giv/src/loop.c:7408:5: error: assigning to '__m128' (vector of 4 'float' values) from incompatible type 'int'
v17 = _mm_loadh_ps( ( const double *)add_val); 
    ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/consec_sets_giv/src/loop.c:7414:1: error: use of undeclared identifier 'v40'; did you mean 'v20'?
v40 = v15; 
^~~
v20
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/consec_sets_giv/src/loop.c:7372:5: note: 'v20' declared here
int v20; // eax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/consec_sets_giv/src/loop.c:7446:13: error: expected ';' after expression
v23 = ( rtx)p[2]; 
            ^
            ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/consec_sets_giv/src/loop.c:7454:9: error: expected expression
*( rtx *)&v23[1], 
        ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/consec_sets_giv/src/loop.c:7455:1: error: use of undeclared identifier 'src_rega'; did you mean 'src_reg'?
src_rega, 
^~~~~~~~
src_reg
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/consec_sets_giv/src/loop.c:7356:5: note: 'src_reg' declared here
rtx src_reg, 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/consec_sets_giv/src/loop.c:7456:1: error: use of undeclared identifier 'add_vala'; did you mean 'add_val'?
add_vala, 
^~~~~~~~
add_val
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/consec_sets_giv/src/loop.c:7358:6: note: 'add_val' declared here
rtx *add_val, 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/consec_sets_giv/src/loop.c:7462:6: error: use of undeclared identifier 'v30'
|| ( v30 = find_reg_note( p, REG_EQUAL, 0LL)) != 0LL 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/consec_sets_giv/src/loop.c:7465:1: error: use of undeclared identifier 'v30'; did you mean 'v33'?
v30->fld[0].rtx, 
^~~
v33
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/consec_sets_giv/src/loop.c:7384:18: note: 'v33' declared here
 struct rtx_def *v33; // [rsp+2h] [rbp-100h] 
                 ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/consec_sets_giv/src/obj/loop.o] Error 1
